# Stryx

./: .gitignore  README.md  pyproject.toml  requirements.txt
deepstream_nvidia/: docker-compose.yaml
k8s/: gpu-setup.sh
k8s/apps/: argocd-redis.yaml  argocd-video-processing.yaml  argocd.yaml  grafana.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml
k8s/argocd/: apps.yaml  argocd.yaml  grafana.yaml  kustomization.yaml  nvidia.yaml  redis-insight.yaml  redis.yaml  timescaledb.yaml  traefik.yaml
k8s/nvidia/: kustomization.yaml
k8s/redis-insight/: deployment.yaml  (+3 more)
mlflow_server/: docker-compose.yml
model/: dino-vit.py
models/: dataset.py  fine_tune_classifier.py  model.py  push_cls_baseline.py  push_ssl_baseline.py
project_tracker/: example_ssl.py  project_tracker.py
src/: .gitignore  docker-compose.yaml  simple_rtsp_server.py
src/model/: README.md  check_available_videos.py  compute_class_weights.py  evaluate_ssl.py  extract_features.py  find_small_objects.py  finetune.py  flake.nix  mlflow.py  perform_eda.py  pretrain_dino.py  pyproject.toml  to_onnx.py  train.py  train_clf.py  train_linear_probe.py  train_ssl.py  visualize_bbox_crop.py  visualize_data.py
src/model/dataset/: bbox_transforms.py  caltech_dataset.py  distillation_dataset.py  embedding_dataset.py  supervised_dataset.py  video_extractor.py
src/model/model/: dino_head.py  dinov2_extractor.py  losses.py  safari_classifier.py  vit_student.py
src/model/model/clf/: pipeline.py  safari_clf.py  safari_clf_v2.py
src/model/model/ssl/: pipeline.py  resnet_ssl.py  tinyvit.py
(+95 files in other folders)
