[project]
name = "model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
    "datasets>=4.5.0",
    "decord>=0.6.0",
    "onnxscript>=0.5.7",
    "ruff>=0.14.11",
    "timm>=1.0.24",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
